--- a/ui/src/app/tracks/all-tracks/all-tracks.component.html
+++ b/ui/src/app/tracks/all-tracks/all-tracks.component.html
@@ -1,17 +1,18 @@
 <ng-container *ngIf="tracks?.length">
-    <button mat-button mat-raised-button color="primary" (click)="goToNewTrack()">Add Track</button>
     <ng-container *ngFor="let track of tracks; let i = index">
-        <app-track-line-item [track]="track" [allowActions]="true" [trackIndex]="i" (currentTrack)="onPlayCommand($event)"></app-track-line-item>
+        <app-track-line-item [track]="track" [allowActions]="true" [trackIndex]="i" (currentTrack)="onPlayCommand($event)"  [ngClass]="{'playingtrack' : playingTrackId == track.id}"></app-track-line-item>
     </ng-container>
     <div>
-        <app-player [files] = "tracks" [playTrack] = "currentActiveTrack"></app-player>
+        <app-player [files] = "tracks" [playTrack] = "currentActiveTrack"  (playingTrackNow)="onPlayingTrackChange($event)"></app-player>
     </div>
 </ng-container>
-
-<ng-container *ngIf="!tracks?.length">
+<div class="new-track-btn">
+    <button mat-button mat-raised-button color="primary" (click)="goToNewTrack()">Add New Track</button>
+</div>
+<!-- <ng-container *ngIf="!tracks?.length">
     <app-no-result-component>
-        <!-- <button *ngIf="tracks" mat-button mat-raised-button color="primary" (click)="goToNewTrack()">Add Track</button> -->
+        <button *ngIf="tracks" mat-button mat-raised-button color="primary" (click)="goToNewTrack()">Add Track</button>
         <a routerLink="/new-track"><button mat-button mat-raised-button color="primary"> Create your first track </button></a>
     </app-no-result-component>
-</ng-container>
+</ng-container> -->
 
