--- a/ui/src/app/no-result-component/no-result-component.component.scss
+++ b/ui/src/app/no-result-component/no-result-component.component.scss
@@ -9,7 +9,7 @@ mat-card {
         align-items: center;
         background-image: url('../../assets/no-results-found.png');
         background-repeat: no-repeat;
-        background-size: 100% 100%;
+        background-size: cover;
         width: 400px;
         height: 400px;
     }
