--- a/ui/src/app/tracks/all-tracks-dialog/all-tracks-dialog.component.html
+++ b/ui/src/app/tracks/all-tracks-dialog/all-tracks-dialog.component.html
@@ -5,7 +5,7 @@
       <ng-container *ngIf="tracks">
         <ng-container *ngFor="let track of tracks">
           <app-track-line-item (trackDismissed)="onTrackDismissed($event)" (trackSelected)="onTrackSelected($event)"
-            [track]="track" [allowSelection]="true" [allowActions]="false"></app-track-line-item>
+            [track]="track" [allowSelection]="true" [allowActions]="[]"></app-track-line-item>
         </ng-container>
       </ng-container>
     </div>
