--- a/ui/src/app/app.component.scss
+++ b/ui/src/app/app.component.scss
@@ -7,8 +7,7 @@
   padding: 1rem;
   height: 100vh;
   overflow-y: scroll;
-  background-color: #020208;
-  background-color: #000000;
+  background-color: #0a0a0a;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='255' height='30.6' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23220703' stroke-width='4.3' stroke-opacity='0.73'%3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
 
   section {
@@ -19,13 +18,18 @@
   cursor: pointer;
   display: flex;
   justify-content: center;
-  background: lightgray;
+  background: #21262c;
   font-size: large;
   font-weight: 500;
   margin-bottom: 0.6rem;
   height: 2rem;
   flex-direction: column;
   text-align: center;
+  color: #c9d1d9;
+  font-size: 14px;
+  border-radius: 4px;
+  padding: 7px 15px;
+  letter-spacing: 0.5px;
   &:hover {
     background: lightslategray;
   }
