--- a/ui/src/app/player/player.component.scss
+++ b/ui/src/app/player/player.component.scss
@@ -3,7 +3,7 @@
     bottom: 0;
     width: 100%;
     padding: 0.75rem 0px;
-    background: #c2315c;
+    background: #c2165b;
     .track-info{
         padding: 0 16px;
     }
