--- a/ui/src/app/side-nav/side-nav.component.scss
+++ b/ui/src/app/side-nav/side-nav.component.scss
@@ -13,7 +13,7 @@
     }
 
     .side-nav-bar-menu-container {
-        background: rgb(66, 66, 66) !important;
+        background: #171717!important;
         position: absolute;
         top: 0;
         bottom: 0;
@@ -26,6 +26,7 @@
             font-size: 2.5em;
             margin: 24px 0px 0px 24px;
             cursor: pointer;
+            color: #424242;
         }
     }
 
