okay wind up for real this time

--- a/ui/src/app/search-results/search-results.component.scss
+++ b/ui/src/app/search-results/search-results.component.scss
@@ -15,9 +15,8 @@
 }
 .playlists {
     display: flex;
-    justify-content: space-evenly;
     .playlist-wrapper {
-        box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
+        margin-left: 1rem;
     }
     .playlist {
         width: 100px;
