--- a/ui/src/app/playlists/all-playlists-dialog/all-playlists-dialog.component.scss
+++ b/ui/src/app/playlists/all-playlists-dialog/all-playlists-dialog.component.scss
@@ -43,3 +43,8 @@ mat-checkbox {
   justify-content: center;
   display: flex;
 }
+.no-data {
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
