--- a/ui/src/app/tracks/all-tracks-dialog/all-tracks-dialog.component.scss
+++ b/ui/src/app/tracks/all-tracks-dialog/all-tracks-dialog.component.scss
@@ -1,3 +1,8 @@
 .mat-dialog-actions {
     justify-content: space-between;
 }
+.no-data {
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+  }
