--- a/ui/src/app/player/player.component.scss
+++ b/ui/src/app/player/player.component.scss
@@ -4,6 +4,7 @@
     width: 100%;
     padding: 0.75rem 0px;
     background: #c2165b;
+    left:0px;
     .track-info{
         padding: 0 16px;
     }
